# SamuMovie

./: .gitignore  CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  Makefile  README.md  Recorder.cpp  Recorder.h  SVideoConverter.cpp  SVideoConverter.h  SamuLife.cpp  SamuLife.h  SamuLife.pro  main.cpp
